[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'

[project]
name = "dleden"
version = '0.0.1'
dependencies = [
  'aiohttp >= 3.9.3',
  'aiofiles >= 23.1.1',
  'bs4 >= 0.0.2'
]
authors = [
  { name='Goncalo Azevedo', email='goncalooazevedo@outlook.com' },
]
description = 'Backups a specific HTTP file server'
[project.scripts]
dleden = 'backup_eden:main'
